Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9.0
-
None
-
-
845aa1e9d (6.9), 5adb97419 (6.9), 845f85c9c (6.9), f10a8dbf6 (6.9.1)
Description
Tabbing between textfields and buttons does not work.
Attachments
For Gerrit Dashboard: QTBUG-136562 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
643155,2 | wasm: call "focus" on window, not canvas | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
645652,2 | wasm: set focus to m_canvas instead of m_window | 6.9.1 | qt/qtbase | Status: MERGED | +2 | 0 |
645679,3 | wasm: set focus to m_canvas instead of m_window | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |