wasm: Fix keyboard popping up on cell and tablets

The fix for text/button broke cellphones and tablets.
(QTBUG-136562)

The fix is reverted on 6.9, and fixed here on 6.10

The fix is to set inputMode so that it matches the focus.

Change-Id: I88b0a32787ff97b6f5b057e4ebd240f565b5a284
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>